fixed dropdown behind alert benny

--- a/CourierFiles/courier_dashboard.css
+++ b/CourierFiles/courier_dashboard.css
@@ -291,6 +291,7 @@ input[type="checkbox"] {
 .container4 p {
   margin: 5px 0 0 0;
   font-size: 0.9rem;
+  margin-left: 10px;
 }
 
 .container5 {
@@ -485,10 +486,14 @@ button:hover{
   background-color:#fff;
   border-radius:5px;
   box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+  z-index: 1; /* Set a higher z-index */
+
 }
 
 .dropdown:hover .dropdown-options {
   display: block;
+  z-index: 2; /* Set a higher z-index when the dropdown is active */
+
 }
 
 .dropdown-options a {
@@ -592,6 +597,5 @@ button:hover{
   width: 22px;
   fill: #f60;
   overflow: hidden;
-  margin-top: 5px;
   max-width: 100%;
 }
